manifests/gateway/readme-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: readme-gateway
  name: readme-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: readme-gateway
  template:
    metadata:
      labels:
        app: readme-gateway
    spec:
      containers:
      - image: wdoyle123/readme-gateway
        name: readme-gateway
        resources: {}
status: {}
