manifests/gateway/readme-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readme-gateway-service
spec:
  selector:
    app: readme-gateway
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
