manifests/gateway/readme-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: readme-gateway-ingress
spec:
  rules:
  - host: writeme.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: readme-gateway-service
            port:
              number: 8080
